# POEtest

./: .Makefile  .gitignore  LICENSE  MEMO.md  README.md  Settings.env  dev.bat  oncontextmenu.js  pyproject.toml  pytest.ini  report.html
allure-results/: 000331cc-4add-4972-bfab-e72a5ee51374-result.json  000a65bf-0123-4f12-97ba-cda363e5d838-result.json  000f1488-0cf5-401c-8f21-f1769a2a97d1-container.json  00292d01-b1e6-442e-b6a0-d29d0d1878ed-result.json  002a8436-c5cb-46ea-a62b-4f1808bd348c-result.json  002a9254-7245-488b-a5c6-6b75a9705e42-result.json  0032a001-7e9f-4f07-82e3-fcd584e058be-result.json  0051279f-cffb-4a43-a304-faf66af8ebdc-result.json  0053449f-dc60-421d-9679-5f32ae31ac86-result.json  00587733-59ae-41ab-9b4b-49aaaa792235-result.json  005a1a15-3f44-4fcf-abe8-5f9b67512440-result.json  00636801-1b80-4ea1-9634-fec17f409bbe-result.json  007c1b28-2314-409d-a031-e4fe9f3d8d11-result.json  007f012c-28b4-4606-b144-ef251fef7327-result.json  0083454a-faba-45ae-904e-de135cbc653d-result.json  008e48cb-2ad5-4bc1-b075-ed3a21eb9349-result.json  009d670a-4dcc-41f5-bd1a-82f74c43b75c-container.json  00ac7a74-9993-426f-8309-8f6f2008ecbc-result.json  00b039b1-7ee5-43f2-a7df-1bc2fd2fb03a-result.json  00bc1882-14f0-4025-a5c4-59cd86514ac1-result.json  00c6ae8f-70db-406f-b0e8-07e26a54fd7e-result.json  00c96961-dfe6-4fd9-9dcb-fba18845a647-container.json  00cafd62-2f8b-4d5d-a616-d10c0ccd347a-result.json  00cde023-d0c0-44d2-8fb0-5708b7150986-container.json  00da3fca-c2b9-4df8-b490-53a3db1d7337-result.json  00dd1d49-3e34-4d8c-9018-de88f995e567-result.json  00edc4ab-9b27-4725-a2b6-475c2da8107a-result.json  00f032c4-7500-437f-aa8d-2d0f2fdcf0dd-container.json  00f38808-1465-4e45-9e77-db645d3cf34c-result.json  00f7ba68-29d5-42a0-88bd-6e17f7078315-result.json  00f83dba-4a6c-41dc-80d4-ab914a0e0e24-container.json  00f8f433-928f-4fae-be27-200e0e4136d7-result.json  010d4385-bbee-4b3a-9154-5fd1416fd26b-result.json  0113584b-c5a1-48ed-8414-fa23cd77bb35-result.json  01298032-4879-4412-b2cc-a9635b26edb8-result.json  (+9603 more)
(+196 files in other folders)
