[tool.poetry]
name = "WebUI"
version = "0.1.0"
description = ""
authors = ["esio <esiokao@gmail.com>"]
readme = "README.md"
packages = [
    { include = "command", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
selenium = "^4.22.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.1"
aiohttp = "^3.9.5"
requests = "^2.32.3"
pytest-html = "^4.1.1"
python-dotenv = "^1.0.1"
allure-pytest = "^2.13.5"
pytest-rerunfailures = "^15.0"
python-generate-mac = "^1.3.1"
scapy = "^2.6.1"
aiosmtpd = "^1.4.6"
pyserial = "^3.5"
asyncio = "^3.4.3"
pyserial-asyncio = "^0.6"
colorama = "^0.4.6"
prompt-toolkit = "^3.0.51"
black = "^25.1.0"
pytest-repeat = "^0.9.4"
pytest-order = "^1.3.0"



[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serial = "src.command.main:main"

# linter

[tool.pylint.format]
max-line-length = 160

[tool.pylint.messages_control]
disable = ["missing-function-docstring"]

[tool.black]
line-length = 160
# only tests
include = 'src/tests/.*\.py$'

